# SGHFL

./: .gitignore  Configure.sh  Dockerfile  README.md  apartment_eval.py  attack_eval.py  client.py  common.py  download_data.sh  electricity_consumption.ipynb  evaluations.ipynb  fairness_eval.py  flake.nix  flax_lightning.py  grid_search.py  jax_test.py  kmeans.ipynb  l2rpn_eval.py  load_data.py  middle_server.py  performance_eval.py  plot.py  power_table.py  pred_cert.ipynb  pyproject.toml  requirements.txt  server.py  shell.nix  solar_home_eval.py  solar_home_table.py  solar_power.ipynb  strategy.py  table.py  test.ipynb
apartment/: apartment.sh  eval.py  main.py
apartment/configs/: attack.json  fairness.json
centre/: fhe.py  main.py  space_sampling.py
common/: __init__.py  attacks.py  client.py  middle_server.py  strategy.py
configs/: attack.json  fairness.json  performance.json  solar_home_fairness.json  solar_home_performance.json
data_processing/: acquire.py  apartment.ipynb  apartment.py  electricity_consumption.ipynb  l2rpn.py  solar_home.py  solar_power.ipynb
fmnist/: README.md  attack_eval.py  fairness_eval.py  performance_eval.py  table.py
fmnist/configs/: fairness.json  performance.json
fmnist/fl/: client_manager.py  load_data.py  middle_server.py  server.py  strategy.py
fmnist/scripts/: count_experiments.py  run_experiments.sh
l2rpn/: README.md  adversaries.py  create_data.py  drl.py  fl.py  l2rpn.sh  logger.py  main.py  table.py  train_agent.py
l2rpn/scripts/: run_experiments.sh
mnist/: attack.sh  attack_eval.py  fairness.sh  fairness_eval.py  performance.sh  performance_eval.py  plot.py  run_experiments.sh
mnist/configs/: attack.json  fairness.json  performance.json
mnist/fl/: __init__.py  attacks.py  client.py  load_data.py  middle_server.py  server.py  simulation.py  strategy.py
opalrt/: test.m
opalrt/+fl/: aggregate.m  applyCentre.m  applyFedProx.m  applyFedavg.m  applyKickbackMomentum.m  applyMedian.m  applyTopK.m  applyTrMean.m  as2sa.m  flattenClientParams.m  initFedAvg.m  initFedProx.m  initFedavg.m  initTopK.m  initTrMean.m  (+3 more)
power/: README.md  adversaries.py  fl.py  load_data.py  logger.py  main.py  table.py  tabulate.py
scripts/: apartment.sh  attack.sh  fairness.sh  l2rpn.sh  performance.sh  solar_home.sh
solar_home/: data_manager.py  eval.py  grid_search.py  main.py  solar_home.sh
src/: __init__.py  adversaries.py  attacks.py  client.py  common.py  data_manager.py  fl.py  load_data.py  main.py  middle_server.py  server.py  statistics.py  strategy.py
ssfgm/: aggregators.py  run_experiments.sh  sensitivity.py
topomean/: ablation.py  aggregators.py  comparison.py  evaluation.py  plot.py  run_experiments.sh  sensitivity.py
utils/: adversaries.py  fl.py  logger.py  models.py
(+63 files in other folders)
