[tool.poetry]
package-mode = false
name = "smahfl"
version = "0.1.0"
description = ""
authors = ["Cody Lewis <hello@codymlewis.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
grid2op = "^1.9.6"
setuptools = "^68.2.2"
tqdm = "^4.66.1"
jax = "^0.4.25"
chex = "^0.1.84"
optax = "^0.1.7"
flax = "^0.8.0"
lightsim2grid = "^0.7.5"
scikit-learn = "^1.3.2"
numba = "^0.59.1"
pandapower = "^2.14.6"
safetensors = "^0.4.1"
einops = "^0.7.0"
l2rpn-baselines = "^0.8.0"
stable-baselines3 = "^2.2.1"
jaxopt = "^0.8.3"
datasets = "^2.16.1"
polars = "^0.20.23"

[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.4"
jedi = "^0.19.1"
flake8 = "^6.1.0"
python-lsp-server = "^1.8.0"
yapf = "^0.40.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
